# zero-deep

./: .gitignore  README.md  memo.md  pyproject.toml
ch01/: try_numpy.py
ch02/: parceptron.py
ch03/: neural_network.py
ch04/: train.py
ch05/: buy_apple.py  buy_apple_orange.py  layers.py  loss.py  train.py
ch06/: batch_norm_test.py  hyperparameter_optimization.py  optimizer_compare.py  optimizer_compare_mnist.py  overfit_dropout.py  overfit_wieght_decay.py  weight_init_compare.py
ch07/: simple_convnet.py  train_convnet.py
common/: layers.py  multi_layer_net_extend.py  optimizer.py  trainer.py  util.py
dataset_zero/: mnist.py
