[project]
name = "zer-deep"
version = "0.1.0"
description = ""
authors = [
    {name = "abkeito",email = "abkeito@yahoo.co.jp"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
